<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Test</string>
    <string name="FamilyName">Family name</string>
    <string name="MaxCharacterInName">Max characters in name</string>
    <string name="CharacterFilter">Character filter</string>
    <string name="CharacterFilter1">First Character</string>
    <string name="CharacterFilter2">Second Character</string>
    <string name="Submit">Submit</string>
    <string-array name="CharacterNo">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="CharacterTone">Character tone</string>
    <string name="MaxStrokeInCharacter">Max strokes in Character</string>
    <string name="MinStrokeInCharacter">Min strokes in Character</string>
    <string name="Tone1">Tone 1</string>
    <string name="Tone4">Tone 4</string>
    <string name="Tone2">Tone 2</string>
    <string name="Tone3">Tone 3</string>
    <string name="PreferPinyin">Prefer pinyin</string>
    <string name="SelectedPinyinsLabel">Selected Pinyins</string>
    <string name="GetSelectedPinyins">Get Selected</string>
    <string name="GetUnSelectedPinyins">Filter Selected</string>
    <string name="WithoutBackNasals">Without back nasals</string>
    <string name="WithoutZHCHSH">Without zh/ch/sh</string>
    <string name="WithoutN">Without n</string>
    <string name="WithoutR">Without r</string>
    <string name="WithoutClosedMouth">Without closed mouth</string>
</resources>
