<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="fill_parent"
    a:layout_height="fill_parent"
    a:orientation="vertical" >

    <CheckBox
        a:id="@+id/checkBox1"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/WithoutR" />

    <CheckBox
        a:id="@+id/checkBox2"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/WithoutN" />

    <CheckBox
        a:id="@+id/checkBox3"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/WithoutZHCHSH" />

    <CheckBox
        a:id="@+id/checkBox4"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/WithoutBackNasals" />

    <CheckBox
        a:id="@+id/checkBox5"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/WithoutClosedMouth" />

</LinearLayout>