<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FamilyName" />

            <EditText
                android:id="@+id/family_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MaxCharacterInName" />

            <Spinner
                android:id="@+id/character_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/CharacterNo"
                android:spinnerMode="dropdown"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <RelativeLayout
                android:id="@+id/name_filter1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/text11"
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CharacterFilter1" />

                <TextView
                    android:id="@+id/text12"
                    android:layout_below="@id/text11"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/name_filter2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/text21"
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CharacterFilter2" />

                <TextView
                    android:id="@+id/text22"
                    android:layout_below="@id/text21"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Submit" />

</LinearLayout>